--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<li><b>Атаки на транспортному рівні (Layer 4):</b> SYN Flood, UDP Flood, TCP Reset.</li> 
 						<li><b>Атаки на рівні додатків (Layer 7):</b> HTTP Flood, Slowloris, DNS Query Flood.</li> 
 					</ul> 
-					<img src="pics/1.png">
+					<img src="pics/1.png" style="width: 100%; max-width: 717px;">
 					<blockquote> <p>Окремо виокремлюються мультивекторні атаки, які поєднують декілька механізмів — наприклад, UDP Flood із SYN Flood. Також існують новітні загрози типу Low-and-Slow, де атака імітує поведінку легального користувача з метою обходу захисту.</p> </blockquote> 
 				</article> 
 				<hr>
@@ -98,7 +98,7 @@
 				<article class="blog-post"> 
 					<h2 class="display-5 link-body-emphasis mb-1" id="methods_view">Методи виявлення</h2> 
 					<p>Виявлення DDoS-атак здійснюється за допомогою різних методів: від простих сигнатурних систем до складних поведінкових моделей. Основними інструментами є системи виявлення вторгнень (IDS), моніторинг трафіку, алгоритми машинного навчання.</p>
-					<img src="pics/2.jpg">
+					<img src="pics/2.jpg" style="width: 100%; max-width: 641px;">
 					<blockquote> <p>Сигнатурні методи порівнюють трафік з відомими шаблонами атак. Поведінкові — аналізують аномалії в мережевій активності. Також активно застосовуються метрики: середній час відповіді, кількість запитів за одиницю часу, частота з'єднань з одного IP тощо.</p> </blockquote> 
 					<p>Серед інструментів: Snort, Suricata, Zeek, NetFlow. Також використовуються комерційні продукти — Arbor APS, Cisco Stealthwatch, Fortinet FortiDDoS.</p>
 				</article> 
@@ -112,7 +112,7 @@
 						<li><b>Прикладний рівень:</b> застосування WAF, CAPTCHA, rate limiting, обфускація URL.</li> 
 					</ul> 
 					<blockquote> <p>Найбільш ефективними є хмарні сервіси захисту: Cloudflare, Akamai, Imperva, Radware. Вони забезпечують миттєве масштабування захисту та автоматичне розпізнавання шаблонів атак.</p> </blockquote> 
-					<img src="pics/3.jpg">
+					<img src="pics/3.jpg" style="width: 100%; max-width: 659px;">
 				</article> 
 				<hr>
 				<article class="blog-post"> 
